--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
       <!--Own CSS-->
-      <link rel="stylesheet" type="text/css" href="css/stylesheet_new.css">
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
       
 
       <!--Boostrap-->
